# ToiUuPhanMemNhung

./: CMakeLists.txt  Lab1_HaTrungKien.docx  Makefile  README.md  bai10_goc.asm  bai10_goc.c  bai10_goc_arm.asm  bai10_goc_arm.elf  bai10_goc_x86.asm  bai10_toiuu.asm  bai10_toiuu.c  bai10_toiuu_arm.asm  bai10_toiuu_arm.elf  bai10_toiuu_x86.asm  bai1_goc  bai1_goc.asm  bai1_goc.c  bai1_goc.elf  bai1_goc_arm.asm  bai1_goc_arm.elf  bai1_goc_x86.asm  bai1_toiuu  bai1_toiuu.asm  bai1_toiuu.c  bai1_toiuu_arm.asm  bai1_toiuu_arm.elf  bai1_toiuu_x86.asm  bai2_goc  bai2_goc.asm  bai2_goc.c  bai2_goc_arm.asm  bai2_goc_arm.elf  bai2_goc_x86.asm  bai2_toiuu  bai2_toiuu.asm  bai2_toiuu.c  bai2_toiuu_arm.asm  bai2_toiuu_arm.elf  bai2_toiuu_x86.asm  bai3_goc  (+78 more)
